--- a/assets/settings.json
+++ b/assets/settings.json
@@ -5,6 +5,7 @@
         "move_up": "w",
         "move_down": "s",
         "move_left": "a",
-        "move_right": "d"
+        "move_right": "d",
+        "game_restart": "r"
     }
 }
